fix: fix z-index

--- a/whylog/blog/static/css/footer.css
+++ b/whylog/blog/static/css/footer.css
@@ -9,6 +9,7 @@
     position: fixed;
     bottom: 0; 
     left: 0;
+    z-index: 3;
 }
 
 
